# sudoku-solver

./: .eslintrc.yml  .gitignore  README.md  package-lock.json  package.json
python/: flask_init.sh  pyproject.toml
python/server/: app.py
python/sudoku_solver/: constants.py  model.py  solver.py  validator.py
python/tests/: test_inner_square.py  test_model.py
src/: App.vue
src/components/: BaseCell.vue  Board.vue
vue/: package-lock.json
vue/src/: main.js
