[tool.poetry]
name = "sudoku_solver"
version = "0.1.0"
description = ""
authors = ["Baker, Jack <jack.baker@astrazeneca.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ortools = "^9.2.9972"
Flask = "^2.0.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
flake8 = "^4.0.1"
bandit = "^1.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
